# aida_ai

./: hooks.py  modules.txt  pyproject.toml  requirements.txt
aida_ai/doctype/aida_ai_email_template/: aida_ai_email_template.json  aida_ai_email_template.py
aida_ai/doctype/aida_ai_email_template/templates/: __init__.py
aida_ai/doctype/aida_ai_session/: aida_ai_session.json  aida_ai_session.py
aida_ai/doctype/aida_ai_session/templates/: __init__.py
aida_ai/public/: __init__.py  build.json  manifest.json
aida_ai/public/css/: __init__.py  aida_ai.bundle.css
aida_ai/public/css/doctype/: __init__.py
aida_ai/public/js/: __init__.py  aida_ai.bundle.js  app.js
aida_ai/public/js/doctype/: __init__.py
aida_ai/templates/emails/: __init__.py
aida_ai/templates/includes/: __init__.py
aida_ai/templates/pages/: __init__.py
aida_ai/www/: aida-ai.html  aida-ai.py
