[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aida_ai"
version = "0.0.1"
description = "Aida AI - Lead Intelligence Agent for ERPNext"
readme = "A comprehensive lead generation and outreach automation system integrated with ERPNext"
authors = [{name = "Aida AI Team", email = "support@aida-ai.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "frappe",
    "requests",
    "langchain",
    "langchain-google-genai",
    "googlemaps",
    "pydantic",
    "fastapi",
    "uvicorn",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/aida-ai/aida-ai"
Repository = "https://github.com/aida-ai/aida-ai.git"
Issues = "https://github.com/aida-ai/aida-ai/issues"

[tool.setuptools]
packages = ["aida_ai"]
include-package-data = true

[tool.setuptools.package-data]
aida_ai = ["**/*.json", "**/*.js", "**/*.css", "**/*.html", "**/*.py", "**/*.txt", "**/*.md"]